# ddd-fastapi-template

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .env  Dockerfile  docker-compose.override.yml  docker-compose.yml  pyproject.toml  tasks.py
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/tests/api/: conftest.py  factories.py  test_web.py
{{cookiecutter.project_slug}}/tests/domain/: test_{{cookiecutter.aggregate_name_snake}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: config.py  init.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/adapters/db/: models.py  repo_sqlalchemy.py  repository_base.py  session.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/api/: deps.py  resp_models.py  users.py  web.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/domain/: __init__.py  commands.py  user.py  {{cookiecutter.aggregate_name_snake}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/service/: __init__.py  {{cookiecutter.aggregate_name_snake}}.py
